--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+8PXfyMmIA7gdRy34/GOFiSQ7s86hQiEOj+r0jQnf2o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8081
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_PORT=54322
+DB_DATABASE=onlyoffice
+DB_USERNAME=postgres
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+ONLYOFFICE_HOST=http://localhost:80
+ONLYOFFICE_SECRET=lNLVKPYgpmIsORvgtzyoFD864Hj1Ld
